<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MessingAround</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="textview2">Goodbye you crazy android diamond</string>
    <string name="usersNameText">Your Name</string>
    <string name="noPickMe">No Pick Me!</string>
    <string name="no">No</string>
    <string name="pickMe">Pick Me</string>
    <string name="yes">Yes</string>
    <string name="happyQuestion">Are You Happy?</string>

</resources>
